<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BrewHorn</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">User name</string>
    <string name="pass_word">Password</string>
    <string name="new_user">New User?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="aroma">Aroma</string>
    <string name="sweet">Sweet</string>
    <string name="bitter">Bitter</string>
    <string name="malt">Malt</string>
    <string name="yeast">Yeast</string>
    <string name="mouth">Mouth</string>
    <string name="feel">Feel</string>
    <string name="sour">Sour</string>
    <string name="additive">Additive</string>
    <string name="booziness">Booziness</string>
    <string name="photo_post">Photo Post</string>
    <string name="androidkey">589751437754650</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="add_beer">Add Beer</string>
    <string name="your_profile">Your Profile</string>
    <string name="experience">Experience</string>

</resources>