<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="none" >

    <Button
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_info" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_back" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/your_profile"
        android:textColor="#891D02"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_above="@+id/user_info_edt_btn"
        android:layout_below="@+id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/registration_linear_layout"
            android:layout_width="270dp"
            android:layout_height="fill_parent"
            android:background="@drawable/registration_back" >

            <TextView
                android:id="@+id/user_info_first_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/first_name"
                android:textColor="#891D02"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_first_name_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_first_name_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_last_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_first_name_txt_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/last_name"
                android:textColor="#891D02"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_last_name_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/user_info_first_name_txt_1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_last_name_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_user_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_last_name_txt_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_name"
                android:textColor="#891D02"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_user_name_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/user_info_last_name_txt_1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_user_name_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_user_name_txt_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#891D02"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_email_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_user_name_txt_1"
                android:layout_marginLeft="57dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_email_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_zip_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_email_txt_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/zip_code"
                android:textColor="#891D02"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/automate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_zip_txt"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="Automate"
                android:textColor="#891D02"
                android:textSize="20sp"  />
            
              <TextView
                android:id="@+id/sharing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/automate_text"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text=" Sharing"
                android:textColor="#891D02"
                android:textSize="20sp"  />
              
              
              <Button
                  android:id="@+id/view_history"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/sharing_text"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="10dp"
                  android:layout_marginBottom="10dp"
                  android:background="@drawable/btn_view_history"/>

            <CheckBox
                android:id="@+id/automate_toggle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_zip_txt"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/automate_text"
                android:button="@drawable/toggle_btn_on_off" />

            <TextView
                android:id="@+id/user_info_zip_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/user_info_email_txt_1"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_zip_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_info_experience_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_info_zip_txt_1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/experience"
                android:textColor="#891D02"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/user_info_experience_txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/user_info_zip_txt_1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/user_info_experience_txt"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/user_info_edt_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/registration_linear_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edt_selector" />

    <Button
        android:id="@+id/user_info_show_taste_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/registration_linear_layout"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/view_beer_profile" />

</RelativeLayout>